<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/displayScreen"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:autofillHints="false"
        android:gravity="bottom|end"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/additionBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="additionBTN"
                android:text="@string/addition"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/FourBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractionBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="subtractionBTN"
                android:text="@string/subtraction"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplicationBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="multiplicationBTN"
                android:text="@string/multiplication"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/decimalBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="decimalBTN"
                android:text="@string/decimal"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divisionBTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="divisionBTN"
                android:text="@string/division"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="400dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.63">

        <Button
            android:id="@+id/equal"
            android:layout_width="0dip"
            android:layout_height="70dip"
            android:layout_weight="1"
            android:onClick="equalBTN"
            android:text="@string/equal"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>